--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,10 +28,10 @@
 /**
 * Подключение custom scrollbar для всего сайта
 */
-@import 'config/scrollbar';
+//@import 'config/scrollbar';
 
 /**
-* Общие параметры, шаблоны(заготовки) и вспомогательные классы
+* Общие параметры
 */
 @import 'config/base';
 
