--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,78 +1,210 @@
 .header {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-  transition: all 0.3s ease-in-out;
-  z-index: 50;
+  z-index: 2;
+}
 
-  .header-is-sticky & {
-    // ..стили для липкого хедера
-    position: fixed;
-    background-color: #007aff;
+.header__top {}
+
+.header__logo {
+  height: 50px;
+  display: flex;
+  justify-content: center;
+}
+
+.header-interactive {
+  background: $blueColor;
+  padding: 10px 0;
+}
+
+.header-interactive__body {
+  display: flex;
+  align-items: center;
+}
+
+.header-menu-icon {
+  display: block;
+  width: 30px;
+  height: 15px;
+  position: relative;
+  left: -15px;
+  background: transparent;
+  margin-right: 8px;
+
+  span,
+  &::before,
+  &::after {
+    position: absolute;
+    width: 30px;
+    height: 2px;
+    background: $whiteColor;
+    display: inline-block;
+    border-radius: 5px;
+
   }
 
-  // .header__container
-  &__container {
-    height: rem($headerHeight);
-    display: flex;
-    align-items: center;
+  span {
+    top: 50%;
+    transform: translate(0, -50%);
+  }
 
-    .header-is-sticky & {
-      height: rem($headerHeight - 50);
+  &::before,
+  &::after {
+    content: "";
+  }
+
+  &::after {
+    top: 0;
+  }
+
+  &::before {
+    bottom: 0;
+  }
+}
+
+.header-search {
+  display: flex;
+  margin-right: 8px;
+}
+
+.header-search__input {
+  max-width: 190px;
+  font-size: 18px;
+  padding: 5px;
+  border-radius: 5px 0px 0px 5px;
+  border: 1px solid #FFF;
+  background: transparent;
+  color: $whiteColor;
+
+  &::placeholder {
+    color: $greyColor;
+    font-size: 14px;
+  }
+}
+
+.header-search__btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 35px;
+  background-color: $yellowColor;
+  border-radius: 0px 5px 5px 0px;
+  transform: translate(-1px, 0);
+
+  span {
+    display: none;
+  }
+}
+
+.header-contacts {
+  max-width: 30px;
+  margin-right: 8px;
+  position: relative;
+
+  &.active {
+    .header-contacts__body {
+      height: 120px;
+      transition: 0.4s;
+      box-shadow: 0px 5px 8px 4px rgba($blueColor, 30%);
     }
   }
 }
 
-// Burger
-/*
-.icon-menu {
+.header-contacts__btn {
+  background: transparent;
+
+  svg {
+    fill: $whiteColor;
+  }
+}
+
+.header-contacts__body {
+  position: absolute;
+  top: 42px;
+  height: 0;
+  left: -46px;
+  width: max-content;
+  overflow: hidden;
+  transition: 0.4s;
+  z-index: 2;
+  background: $blueColor;
+  box-shadow: 0px;
+  border-radius: 0 0 5px 5px;
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.header-socials {
+  display: flex;
+  padding: 10px 5px;
+}
+
+.header-socials__item {
+  svg {
+    fill: $whiteColor;
+  }
+
+  &:first-child {
+    margin-right: 10px;
+  }
+}
+
+.header-phones {}
+
+.header-phones__item {
+  padding: 10px 5px;
+  border-bottom: 1px solid $whiteColor;
+
+  a {
+    color: $whiteColor;
+  }
+}
+
+.header-cart {
+  background: transparent;
+  position: relative;
+
+  svg {
+    fill: $whiteColor;
+  }
+}
+
+.header-cart__text {
   display: none;
-
-  @include mediaMx(768) {
-    display: block;
-    position: relative;
-    width: rem(30);
-    height: rem(18);
-    cursor: pointer;
-    z-index: 5;
-
-    span,
-    &::before,
-    &::after {
-      content: "";
-      transition: all 300ms ease 0ms;
-      right: 0;
-      position: absolute;
-      width: 100%;
-      height: rem(2);
-      background-color: #000;
-    }
-
-    &::before {
-      top: 0;
-    }
-
-    &::after {
-      bottom: 0;
-    }
-
-    span {
-      top: calc(50% - rem(1));
-    }
-
-    .menu-open & {
-      span {
-        width: 0;
-      }
-
-      &::before {
-        top: calc(50% - rem(1));
-        transform: rotate(-45deg);
-      }
-
-      &::after {
-        bottom: calc(50% - rem(1));
-        transform: rotate(45deg);
-      }
-    }
-  }
 }
-*/
+
+.header-cart__number {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  width: 15px;
+  height: 15px;
+  background: $greenColor;
+  color: $whiteColor;
+  border-radius: 50%;
+  font-size: 11px;
+}
+
+.header__bottom {
+  background: $blueColor;
+  height: calc(100vh - (53px + 50px));
+}
+
+.header-menu {}
+
+.header-menu__item {}
+
+.header-catalog {}
+
+.header-catalog__btn {
+  background: transparent;
+}
+
+.header-catalog__list {
+  height: 0;
+  overflow: hidden;
+}
+
+.hedaer-catalog__item {}
