--- a/src/scss/config/fonts.scss
+++ b/src/scss/config/fonts.scss
@@ -1,8 +1,8 @@
 @font-face {
 	font-family: Inter;
 	font-display: swap;
-	src: url("../fonts/Inter-Bold.woff2") format("woff2");
-	font-weight: 700;
+	src: url("../fonts/Inter-Medium.woff2") format("woff2");
+	font-weight: 500;
 	font-style: normal;
 }
 @font-face {
@@ -10,5 +10,12 @@
 	font-display: swap;
 	src: url("../fonts/Inter-Regular.woff2") format("woff2");
 	font-weight: 400;
+	font-style: normal;
+}
+@font-face {
+	font-family: Inter;
+	font-display: swap;
+	src: url("../fonts/Inter-Bold.woff2") format("woff2");
+	font-weight: 700;
 	font-style: normal;
 }
