--- a/src/scss/config/vars.scss
+++ b/src/scss/config/vars.scss
@@ -25,7 +25,7 @@ $fontColor: $blackColor; // Цвет шрифта по умолчанию
 $fontSize: 16; // Размер шрифта по умолчанию
 $fontWeight: $mainWeight; // Жирность шрифта по умолчанию
 
-$standartTrans: all 280ms ease-in-out 0ms;
+$standartTrans: all 0.4s ease 0ms;
 
 $btnBoxShadow: 0px 2px 3px rgba(#000, 10%), 0px 8px 3px rgba(#000, 10%);
 
