--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -62,10 +62,30 @@
 
   &::after {
     top: 0;
+    transition: $standartTrans;
   }
 
   &::before {
     bottom: 0;
+    transition: $standartTrans;
+  }
+}
+
+html.menu-open .header-menu-icon {
+  span {
+    display: none;
+  }
+
+  &::after {
+    top: 7px;
+    transform: rotate(45deg);
+    transition: $standartTrans;
+  }
+
+  &::before {
+    bottom: 5px;
+    transform: rotate(-45deg);
+    transition: $standartTrans;
   }
 }
 
@@ -202,16 +222,22 @@
 //Header bottom
 .header__bottom {
   background: $blueColor;
-  height: calc(100vh - (53px + 50px));
+  height: 0;
   font-size: 18px;
   font-weight: 500;
   color: $whiteColor;
   overflow-y: scroll;
+  transition: $standartTrans;
   border-top: 1px solid $whiteColor;
 
   a {
     width: 100%;
   }
+}
+
+html.menu-open .header__bottom {
+  transition: $standartTrans;
+  height: calc(100vh - (53px + 50px));
 }
 
 .header-menu {}
