Animations to header top section were added. Common styles began to use. Button and input block became global

--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -123,6 +123,11 @@ html.menu-open .header-menu-icon {
   span {
     display: none;
   }
+
+  &:active {
+    box-shadow: 0px 0px 8px 2px $yellowColor;
+    transition: $standartTrans;
+  }
 }
 
 //========================================================================================================================================================
