--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -38,7 +38,7 @@
 /**
 * БЕМ блоки используемые во всё проекте
 */
-//@import 'config/common';
+@import 'config/common';
 
 /**
 * Подключение стилей отдельных блоков и секций
