--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -44,7 +44,7 @@
 * Подключение стилей отдельных блоков и секций
 */
 @import 'components/header';
-//@import 'components/popup';
+@import 'components/cart-popup';
 //@import 'components/tabs';
 //@import 'components/accordion';
 @import 'components/footer';
