--- a/src/scss/config/base.scss
+++ b/src/scss/config/base.scss
@@ -35,7 +35,7 @@ img {
   min-height: 100%;
 
   /** Поменять на clip - если используется в проекте position: sticky */
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .page {
