--- a/src/scss/config/vars.scss
+++ b/src/scss/config/vars.scss
@@ -34,3 +34,9 @@ $lightBoxShadow: 0 0 2px 0 rgba(#000, 10%), 0 0 4px 0 rgba(#000, 10%),
 
 $hoverBoxShadow: 0 0 5px 0 rgba(#000, 10%), 0 0 10px 0 rgba(#000, 10%),
   0 0 15px 0 rgba(#000, 10%);
+
+//adaptive
+$mobileS: 360px;
+$mobileB: 425px;
+$tablet: 768px;
+$laptop: 1024px;
