--- a/src/scss/components/cart-popup.scss
+++ b/src/scss/components/cart-popup.scss
@@ -1,11 +1,14 @@
 .cart {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 3;
     width: 100%;
     min-height: 100%;
-    background: $whiteColor;
+    background-color: rgba(0, 0, 0, 0.5);
     opacity: 0;
     pointer-events: none;
     transition: $standartTrans;
@@ -19,6 +22,18 @@
         overflow-y: auto;
         max-height: none;
     }
+
+}
+
+.cart__content {
+    background: $whiteColor;
+
+    @media (min-width: $laptop) {
+        max-width: 840px;
+        padding: 15px;
+        border-radius: 10px;
+
+    }
 }
 
 .cart__container {}
@@ -29,11 +44,14 @@
     align-items: center;
     padding: 15px 0 10px 0;
     border-bottom: 1px solid $blackColor;
+    margin-bottom: 10px;
+
+    @media (min-width: $laptop) {
+        margin-bottom: 25px;
+    }
 }
 
-.cart__title {
-    text-transform: uppercase;
-}
+.cart__title {}
 
 .cart__close {
     background: transparent;
@@ -43,21 +61,45 @@
 
 .cart-product {
     position: relative;
+
+    @media (min-width: $laptop) {
+        display: grid;
+        grid-template-columns: max-content 1fr;
+        grid-template-rows: 1fr 1fr;
+        column-gap: 20px;
+    }
 }
 
 .cart-product__img {
     max-width: 175px;
     margin: 20px 0;
+    grid-row: span 2;
+
+    @media (min-width: $laptop) {
+        max-width: 200px;
+    }
 }
 
 .cart-product__delete {
     position: absolute;
     top: 60px;
     right: 0;
+
+    @media (min-width: $laptop) {
+        top: 35px;
+    }
 }
 
 .cart-product__name {
     margin-bottom: 15px;
+    transition: 0.2s;
+
+    @media (any-hover: hover) {
+        &:hover {
+            color: $yellowColor;
+            transition: 0.2s;
+        }
+    }
 }
 
 .cart-product__row {
@@ -105,6 +147,11 @@
     font-size: 14px;
     color: $redColor;
     text-decoration: line-through solid $redColor;
+
+    @media (min-width: $tablet) {
+        font-size: 18px;
+        margin-bottom: 3px;
+    }
 }
 
 .cart-product__actual-price {}
@@ -116,4 +163,16 @@
     font-size: 18px;
     margin-bottom: 10px;
     text-decoration: underline;
+    transition: 0.2s;
+
+    @media (min-width: $tablet) {
+        max-width: max-content;
+    }
+
+    @media (any-hover: hover) {
+        &:hover {
+            color: $yellowColor;
+            transition: 0.2s;
+        }
+    }
 }
