--- a/src/scss/config/common.scss
+++ b/src/scss/config/common.scss
@@ -6,6 +6,14 @@ textarea {
     }
 }
 
+section {
+    margin-bottom: 20px;
+
+    @media (min-width: $tablet) {
+        margin-bottom: 25px;
+    }
+}
+
 .button {
     background: $yellowColor;
     transition: $standartTrans;
