--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -5,6 +5,7 @@
   left: 0;
   width: 100%;
   z-index: 2;
+  background: $whiteColor;
 }
 
 //========================================================================================================================================================
