--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -45,6 +45,7 @@
 */
 @import 'components/header';
 @import 'components/cart-popup';
+@import 'components/categories.scss';
 //@import 'components/tabs';
 //@import 'components/accordion';
 @import 'components/footer';
