The new section and product card section are ready.

--- a/src/scss/config/common.scss
+++ b/src/scss/config/common.scss
@@ -17,6 +17,7 @@ section {
 .button {
     background: $yellowColor;
     transition: $standartTrans;
+    color: $whiteColor;
 
     @media (any-hover: hover) {
         &:hover {
