--- a/src/scss/config/base.scss
+++ b/src/scss/config/base.scss
@@ -59,3 +59,149 @@ img {
     margin-top: 165px;
   }
 }
+
+.button-actions__container {
+  position: relative;
+}
+
+.button-action {
+  position: fixed;
+  right: 5px;
+  bottom: 0;
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+
+  svg {
+    fill: $whiteColor;
+  }
+
+  @media (min-width: $tablet) {
+    width: 65px;
+    height: 65px;
+  }
+
+  @media (min-width: 1450px) {
+    right: 2%;
+    width: 70px;
+    height: 70px;
+  }
+}
+
+.callback__btn {
+  background: $yellowColor;
+  bottom: 10px;
+
+  svg {
+    width: 30px;
+    height: 30px;
+    z-index: 3;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    display: block;
+    width: 55px;
+    height: 55px;
+    background: $yellowColor;
+    border-radius: 50%;
+    transition: all 200ms;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    z-index: 0;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    display: block;
+    width: 50px;
+    height: 50px;
+    background: $yellowColor;
+    border-radius: 50%;
+    animation: pulse-border 1100ms ease-out infinite;
+  }
+
+  @media (min-width: $tablet) {
+    &::after {
+      width: 65px;
+      height: 65px;
+    }
+
+    &::before {
+      width: 55px;
+      height: 55px;
+    }
+  }
+
+  @media (min-width: 1450px) {
+    bottom: 20px;
+
+    svg {
+      width: 35px;
+      height: 35px;
+    }
+
+    &::after {
+      width: 70px;
+      height: 70px;
+    }
+
+    &::before {
+      width: 60px;
+      height: 60px;
+    }
+  }
+}
+
+@keyframes pulse-border {
+  0% {
+    transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1.5);
+    opacity: 0;
+  }
+}
+
+.to-top {
+  display: none;
+  background: $greenColor;
+  bottom: 70px;
+  box-shadow: 0px 0px 8px 5px rgba($greenColor, 0.50);
+
+  svg {
+    width: 40px;
+    height: 40px;
+    transform: rotate(180deg);
+  }
+
+  @media (min-width: $tablet) {
+    bottom: 80px;
+
+    svg {
+      width: 50px;
+      height: 50px;
+    }
+  }
+
+  @media (min-width: 1450px) {
+    bottom: 100px;
+  }
+
+  &_active {
+    display: block;
+  }
+}
