--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -44,10 +44,12 @@
 * Подключение стилей отдельных блоков и секций
 */
 @import 'components/header';
+@import 'components/popup';
 @import 'components/cart-popup';
 @import 'components/categories';
 @import 'components/new';
 @import 'components/product-card';
+@import 'components/callback';
 //@import 'components/tabs';
 //@import 'components/accordion';
 @import 'components/footer';
