--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -205,6 +205,7 @@ html.menu-open .header-menu-icon {
 //========================================================================================================================================================
 .header-interactive__group {
   display: flex;
+  align-items: center;
 }
 
 //Header contacts
@@ -289,12 +290,16 @@ html.menu-open .header-menu-icon {
     }
   }
 
-  &:first-child {
+  &:not(:last-child) {
     margin-right: 10px;
   }
 }
 
-.header-phones {}
+.header-phones {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
 .header-phones__item {
   padding: 10px 5px;
@@ -341,7 +346,8 @@ html.menu-open .header-menu-icon {
     align-items: center;
     background: $yellowColor;
     border-radius: 5px;
-    padding: 5px 8px;
+    padding: 8px;
+    height: max-content;
 
     svg {
       width: 25px;
@@ -513,6 +519,10 @@ html.menu-open .header__bottom {
     z-index: 2;
     background: $blueColor;
     min-width: 200px;
+    overflow-y: auto;
+    max-height: calc(100vh - 140px);
+    width: 400px;
+    max-width: max-content;
   }
 }
 
