--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -151,6 +151,7 @@ html.menu-open .header-menu-icon {
   border: 1px solid #FFF;
   background: transparent;
   color: $whiteColor;
+  outline: none;
 
   &::placeholder {
     color: $greyColor;
