--- a/src/scss/config/common.scss
+++ b/src/scss/config/common.scss
@@ -15,6 +15,7 @@ textarea {
 }
 
 .button {
+    font-size: 16px;
     background: $yellowColor;
     transition: $standartTrans;
     color: $whiteColor;
@@ -110,4 +111,40 @@ textarea {
     @media (min-width: $tablet) {
         max-width: 200px;
     }
+}
+
+.breadcrumbs {
+    display: flex;
+    margin-bottom: 10px;
+}
+
+.breadrrumbs__item {
+    font-size: 14px;
+
+    &:not(:last-child) {
+        display: flex;
+        margin-right: 5px;
+
+        a {
+            margin-right: 5px;
+        }
+
+        &::after {
+            content: '/';
+            display: block;
+        }
+    }
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
