--- a/src/scss/config/reset.scss
+++ b/src/scss/config/reset.scss
@@ -10,10 +10,13 @@
   box-sizing: border-box;
 }
 
-:focus,
-:active,
-a:focus,
-a:active {
+// :focus,
+// :active,
+// a:focus,
+// a:active {
+//   outline: none;
+// }
+form * {
   outline: none;
 }
 
@@ -103,4 +106,16 @@ h6 {
 
 sup {
   color: inherit;
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none; // Yeah, yeah everybody write about it
+}
+
+input[type='number'],
+input[type="number"]:hover,
+input[type="number"]:focus {
+  appearance: none;
+  -moz-appearance: textfield;
 }
