--- a/src/scss/components/popup.scss
+++ b/src/scss/components/popup.scss
@@ -24,6 +24,7 @@
 .popup__content {
     background: $whiteColor;
     height: max-content;
+    min-height: 100%;
     width: 100%;
 
     @media (min-width: $laptop) {
