--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -53,6 +53,7 @@
 @import 'components/callback';
 @import 'components/catalog';
 @import 'components/filter';
+@import 'components/pagging';
 //@import 'components/tabs';
 //@import 'components/accordion';
 @import 'components/footer';
