Contacts page is ready

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -54,6 +54,7 @@
 @import 'components/catalog';
 @import 'components/filter';
 @import 'components/pagging';
+@import 'components/contacts';
 //@import 'components/tabs';
 //@import 'components/accordion';
 @import 'components/footer';
