--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -55,6 +55,7 @@
 @import 'components/filter';
 @import 'components/pagging';
 @import 'components/contacts';
+@import 'components/product';
 //@import 'components/tabs';
 //@import 'components/accordion';
 @import 'components/footer';
